main/fix-overflow

--- a/src/components/PreloadVideo/styles.css
+++ b/src/components/PreloadVideo/styles.css
@@ -4,7 +4,9 @@
   min-width: 100%; 
   min-height: 100%; 
 }
-
+.main-video-container{
+  overflow: hidden;
+}
 .video-play {
   position: absolute;
   width: 5.0vw;
